[package]
name = "cred-lock"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "0.7"
dialoguer = "0.5"
security-framework = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3"